38-docker-in-docker/challenge/deployment/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: x08-docker-in-docker-netpol
  labels:
    app.kubernetes.io/name: x08-docker-in-docker
    challenge: x08
spec:
  podSelector:
    matchLabels:
      app: x08-docker-in-docker
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow ingress traffic exclusively on SSH/22 from platform gateway
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: platform-gateway
    ports:
    - protocol: TCP
      port: 22
  egress:
  # Allow internal DNS resolution only
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
